--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%,
 
     </div>
     <script type="text/javascript"
-        src="https://cronchatcronapp.cronapp.io/get-chat?token=AAFBExDt8g3pn_WueSoQEIBuBCc5S3uEwpw"></script>
+        src="https://cronchatnovo.cronapp.io/get-chat?token=AAEv1PT4PFl9cv9UaQFV6YtrYdTiJ9GspUg"></script>
 
     <body>
     </body>
